--- a/Lab One.html
+++ b/Lab One.html
@@ -25,16 +25,9 @@
 
     <div>Hello</div> <div>How are you</div> <div>I'm thriving, thanks</div>
     My favourite colour is <span style="color:darkorange">orange</span>, followed closely by <span style="color: blue;"> blue.</span> <span style="font-family: Georgia, 'Times New Roman', Times, serif;">I like the font Georgia; it's nice to read.</span>
-    <p>
-        p represents paragraph     without preserving      spacing
-        </p>
-        <pre>
-        Text in         a pre element
-        is displayed in a fixed-width
-        font, and it preserves
-        both      spaces and
-        line breaks
-        </pre>
+    <p> p represents paragraph without preserving spacing </p>
+    <pre> Text in a pre element is displayed in a fixed-width font, and it preserves both spaces and line breaks</pre>
+    <!-- didn't quite understand the task for the above exercise, so I just formatted the p and pre things but please let me know if that isn't right-->    
     <div>   
     <h3>An unordered shopping list</h3>
     <ul>
