Available to be marked

--- a/Lab 1.2 helloWorld.html
+++ b/Lab 1.2 helloWorld.html
@@ -1,6 +1,6 @@
-<!--this is Exercise 2 of Lab One. Changes as per the exercise are in blue.-->
-<html>>
-    <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
         <title>Hello World</title>
 </head>
 <body>
