ready for marking

--- a/Lab 1.2 helloWorld.html
+++ b/Lab 1.2 helloWorld.html
@@ -1,3 +1,4 @@
+<!-- Create a folder for storing all IOD related work.  Open VS Code, then use Open Folder to open the above folder. Create a new folder for Module1. Inside this folder, create a new file, call it helloWorld.html and copy this code into that file.Save the file-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
