incomplete but open to marking and feedback

--- a/Lab 1.3 ChangeMe.html
+++ b/Lab 1.3 ChangeMe.html
@@ -1,4 +1,4 @@
-<!--need help with getting the button clickable and how to activate it to change text and background colour. Just unsure of the stacking/formatting of the code for this-->
+<!--Using this code as a starter: - Add a ‘Change Me’ button under each heading - Style your buttons with CSS - Add a script tag with two JS functions, one for each button- Clicking each button should change the background colour and the heading text for that column.-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -53,11 +53,7 @@
             <button class="button2">Change Me</button>
         </div>
     </div>  
-    <script>
-        window.onclick = myFunction;
-        function myFunction() {
-          document.getElementsByTagName("BODY")[0].style.backgroundColor = "yellow";
-        }
-        </script>
 </body>
 </html>
+
+<!--need help with getting the button clickable and how to activate it to change text and background colour. Just unsure of the stacking/formatting of the code for this-->
