--- a/Lab 1.4 functions.html
+++ b/Lab 1.4 functions.html
@@ -1,4 +1,4 @@
-<!--I cannot figure out how to show multiple functions on one page, it always just shows the first one. Assume I need to rename the functions or something?-->
+<!-- Create 4 functions for the 4 main mathematical operations (-,+,/,*). Return the calculated value and then output it to the screen.-->
 
 <!DOCTYPE html>
 <html>
@@ -43,6 +43,13 @@ document.getElementById("demo").innerHTML = result;
     document.getElementById("demo").innerHTML = result;
 </script>
 
-</body>
-</html>
+<!--I cannot figure out how to show multiple functions on one page, it always just shows the first one. Assume I need to rename the functions or something?-->
+
+<!--Create a function that takes the name of a person as an argument, and prints out “Hello <name>” to the console.-->
+
+  
+
+
+
+  
 
