--- a/Lab 1.7 functionspt2.html
+++ b/Lab 1.7 functionspt2.html
@@ -1,1 +1,3 @@
 <!--Write a specification comment for each function in Exercise 4. Write at least 3 unit tests for each function. In the unit tests, try to include both expected and non-typical test values (such as zero or negative numbers -->
+
+<!--once I get my head around Exercise 4 I will be able to complete this one :)-->
