--- a/Lab 2.1 HTML form.html
+++ b/Lab 2.1 HTML form.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <nav>
-      <a href="/test-repo/Lab One.html">Index Page</a>
+      <a href="/test-repo/Lab 2.1.html">Index Page</a>
     </nav>
   </header>
   <h2>HTML Forms</h2>
