--- a/Lab 2.2 CSS.html
+++ b/Lab 2.2 CSS.html
@@ -3,13 +3,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="Lab 2.2 index.css">
     <title>Module 2 - CSS Lab Exercises</title>
-
     <!-- 5.3 - Select the <link> option from ‘Use on the web’ and copy the stylesheet code into the <head> section of index.html -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
   </head>
   <body>
     <h1>My CSS journey</h1>
@@ -26,7 +28,7 @@
           1.3. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </p>
-        <p id="style-me2" class="style-me1">
+        <p id="style-me2" class="style-me1" style="color: purple;">  
           1.4. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </p>
@@ -113,7 +115,6 @@
         occaecat cupidatat non proident, sunt in culpa qui officia deserunt
         mollit anim id est laborum."
       </div>
-
       <div class="calc-row">
         <div class="fixed-width-col"><img src="assets/images/img1.png" width="300"/></div>
         <div class="fluid-col">This text should expand to fill 'the rest' of the page width not used by the image inside the fixed-width-col.
