--- a/Lab 2.2 CSS.html
+++ b/Lab 2.2 CSS.html
@@ -3,9 +3,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="Lab 2.2 index.css">
+    <link rel="stylesheet" href="/IOD-Labs/Lab 2.2 CSS.css">
     <title>Module 2 - CSS Lab Exercises</title>
-    <!-- 5.3 - Select the <link> option from ‘Use on the web’ and copy the stylesheet code into the <head> section of index.html -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
