--- a/Lab 2.3 Flexbox.html
+++ b/Lab 2.3 Flexbox.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="HTML, CSS" />
     <meta name="author" content="Institute of Data" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/IOD-Labs/Lab 2.3 Flexbox.css">
   </head>
   <body>
     <section>
