not touched as per instructions

--- a/Lab 2.3 Flexbox.html
+++ b/Lab 2.3 Flexbox.html
@@ -53,11 +53,11 @@
       <h3>7. Flexbox for horizontal navigation </h3>
 
       <ul class="flex-container flex-menu background-1">
-        <li class="background-3 first-item"><a href="#">Home</a></li>
-        <li class="background-3 second-item"><a href="#">About Us</a></li>
-        <li class="background-3 third-item"><a href="#">Services</a></li>
-        <li class="background-3 fourth-item"><a href="#">FAQs</a></li>
-        <li class="background-3 fifth-item"><a href="#">Contact Us</a></li>
+        <ul class="background-3 first-item"><a href="#">Home</a></ul>
+        <ul class="background-3 second-item"><a href="#">About Us</a></ul>
+        <ul class="background-3 third-item"><a href="#">Services</a></ul>
+        <ul class="background-3 fourth-item"><a href="#">FAQs</a></ul>
+        <ul class="background-3 fifth-item"><a href="#">Contact Us</a></ul>
       </ul>
     </section>    
   </body>
