Ready for marking

--- a/Lab 2.1 HTML.html
+++ b/Lab 2.1 HTML.html
@@ -4,7 +4,7 @@
 <head>
     <header>
         <nav>
-            <a href="/IOD-Labs/Lab 2.1 form.html">Form Page</a>
+            <a href="/IOD-Labs/Lab 2.1 HTML form.html">Form Page</a>
           </nav>
       </header>
     <title>Lab 2.1 Exercises HTML Elements</title>
@@ -51,7 +51,7 @@
 </article>
 
 <article>
-    <h2>Article Two!</h2>
+    <h2>HTML Tables</h2>
 <table>
     <thead>
     <tr>
