--- a/Lab 2.4 BYO webpage.html
+++ b/Lab 2.4 BYO webpage.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="/IOD-Labs/Lab 2.4 BYO webpage.css">
   </head>
   <body>
-    <header>Rachael Elizabeth Wilkins</header>
-	<nav>
-        <a href="/aboutme/">About Me</a> |
-        <a href="/portfolio/">Portfolio</a> |
-        <a href="/contactme/">Contact Me</a>
-    </nav>
+    <header>
     <section>
-        <h2>Welcome to my page!</h2>
-        <p>Kia ora, e hoa! I'm Rachael - an aspiring Software Engineering with a love for front-end development and making websites not just look good, but act good. I have lots of experience in copywriting, storytelling, brand management, and social media management.</p>
+        <img src="/images/cartoon me v2.png" alt="me as a cartoon" style="width:200px;height:200px;">
+        <h1>Rachael Elizabeth Wilkins</h1>
+        <h3>Aspiring Techie</h3>
+        <div class="flex-item-1">
+        <h2>About Me</h2>
+        <p>Kia ora, e hoa! I'm Rachael - an aspiring Software Engineer. I have lots of experience in copywriting, storytelling, brand management, and social media management. I am also a Group Fitness Instructor, and food and nap enthusiast. Dogs are great.</p>
+        </div>
       </section>
+    </header>
     <section>
+        <div class="flex-item-2">
         <h2>Education</h2>
         <h3>Institute of Data - Software Engineering Certificate</h3>
         <p>February 2024 - July 2024</p>
@@ -38,8 +40,10 @@
                 <li>Copywriting</li>
                 <li>Storytelling</li>
                 <li>Media Management</li>
-        </ul> 
+        </ul>
+        </div> 
     </section> 
+        <div class="flex-item-3">
         <h2>Work Experience</h2> 
         <h3>National Communications and Engagement Manager - Healthy Families NZ, funded by Te Whatu Ora</h3>
         <p>January 2023 - present</p>
@@ -53,41 +57,44 @@
         <h3>Strategic Communications Manager - Sport Canterbury</h3>
         <p>March 2022 - October 2022 (contract role)</p>
             <ul> 
-                <li>Brand Management</li>
-                <li>Marketing Management</li>
-                <li>Copywriting</li>
                 <li>Storytelling</li>
-                <li>Media Management</li>
+                <li>Publishing</li>
+                <li>Social Media Management</li>
+                <li>Report writing</li>
+                <li>Stragetic Writing</li>
             </ul>    
         <h3>Group Fitness Manager - Les Mills Takapuna</h3>
         <p>July 2022 - January 2023</p>
             <ul> 
-                <li>Brand Management</li>
-                <li>Marketing Management</li>
-                <li>Copywriting</li>
-                <li>Storytelling</li>
-                <li>Media Management</li>
+                <li>Timetable optimization</li>
+                <li>Contractor Management (50+)</li>
+                <li>Recruitment, Training, Development of Instructors</li>
+                <li>Report writing</li>
+                <li>Customer Service</li>
             </ul>              
         <h3>Portfolio Manager - Te Whatu Ora, formerly the Ministry of Health</h3>
          <p>September 2020 - July 2022</p>
                 <ul> 
-                    <li>Brand Management</li>
-                    <li>Marketing Management</li>
-                    <li>Copywriting</li>
+                    <li>Digital engagement</li>
                     <li>Storytelling</li>
-                    <li>Media Management</li>
+                    <li>Relationship building</li>
+                    <li>Stakeholder Engagement</li>
+                    <li>Training and Development of colleagues</li>
                 </ul>     
-         <p>Previous work experience available on request.</p>    
+         <p>Prior work experience available on request.</p>   
+        </div>  
     </section>  
     <section>
+        <div class="flex-item-4">
         <h2>Contact me</h2> 
         <ul> 
             <li>rachaelwilkinscommunications@outlook.com</li>
             <li>+64 21 901 400</li>
-            <li>linkedin.com/in/rachael-wilkins</li>
             <li>Tāmaki Makaurau, Aotearoa</li>
+            <li>LinkedIn</li>
         </ul> 
+        </div>
     </section>     
+    <footer>Lovingly crafted by Rachael Wilkins, 2024</footer>
   </body>
-
 </html>
