total WIP do not look

--- a/Lab 2.4 BYO webpage.html
+++ b/Lab 2.4 BYO webpage.html
@@ -16,6 +16,13 @@
         <div class="flex-item-1">
         <h2>About Me</h2>
         <p>Kia ora, e hoa! I'm Rachael - an aspiring Software Engineer. I have lots of experience in copywriting, storytelling, brand management, and social media management. I am also a Group Fitness Instructor, and food and nap enthusiast. Dogs are great.</p>
+        <h3>Contact Me</h3> 
+        <ul> 
+            <li><a href="mailto:rachaelwilkinscommunications@outlook.com">Email</a></li>
+            <li>+64 21 901 400</li>
+            <li>Tāmaki Makaurau, Aotearoa</li>
+            <li><a href="https://www.linkedin.com/in/rachael-wilkins/">LinkedIn</a></li>
+        </ul> 
         </div>
       </section>
     </header>
@@ -85,15 +92,7 @@
         </div>  
     </section>  
     <section>
-        <div class="flex-item-4">
-        <h2>Contact me</h2> 
-        <ul> 
-            <li>rachaelwilkinscommunications@outlook.com</li>
-            <li>+64 21 901 400</li>
-            <li>Tāmaki Makaurau, Aotearoa</li>
-            <li>LinkedIn</li>
-        </ul> 
-        </div>
+        
     </section>     
     <footer>Lovingly crafted by Rachael Wilkins, 2024</footer>
   </body>
