--- a/Lab 2.4 BYO webpage.html
+++ b/Lab 2.4 BYO webpage.html
@@ -15,7 +15,7 @@
         <h3>Aspiring Techie</h3>
         <div class="flex-item-1">
         <h2>About Me</h2>
-        <p>Kia ora, e hoa! I'm Rachael - an aspiring Software Engineer. I have lots of experience in copywriting, storytelling, brand management, and social media management. I am also a Group Fitness Instructor, and food and nap enthusiast. Dogs are great.</p>
+        <p>Kia ora, e hoa! Ko Rachael toku ingoa - an aspiring Software Engineer. I have lots of experience in copywriting, storytelling, brand management, and social media management. I am also a Group Fitness Instructor, and food and nap enthusiast. Dogs are great.</p>
         <h3>Contact Me</h3> 
         <ul> 
             <li><a href="mailto:rachaelwilkinscommunications@outlook.com">Email</a></li>
