ready for marking

--- a/Lab 2.3 Flexbox.html
+++ b/Lab 2.3 Flexbox.html
@@ -12,7 +12,6 @@
   <body>
     <section>
       <h3>2. Basic flexbox</h3>
-
       <div class="flex-container">
         <div class="flex-item-1 background-1 h-80 m-20"></div>
         <div class="flex-item-2 background-2 h-80 m-20"></div>
@@ -20,27 +19,21 @@
         <div class="flex-item-4 background-4 h-80 m-20"></div>
       </div>
     </section>
-
     <section>
       <h3>3. Centering with flexbox</h3>
-
       <div class="m-20 flex-container flex-center h-400 background-4">
         <div class="background-1 h-80 w-80"></div>
       </div>
     </section>
-
     <section>
       <h3>4. Assigning leftover space</h3>
-
       <div class="flex-container flex-space-between">
         <div class="h-80 background-1">I'm on the left</div>
         <div class="h-80 background-2">I'm on the right</div>
       </div>
     </section>
-
     <section>
       <h3>5. Wrapping items</h3>
-
       <div class="flex-container flex-wrap">
         <div class="flex-basis-item-50 h-80 background-1">1</div>
         <div class="flex-basis-item-50 h-80 background-2">2</div>
@@ -48,16 +41,14 @@
         <div class="flex-basis-item-50 h-80 background-4">4</div>
       </div>
     </section>
-
     <section>
       <h3>7. Flexbox for horizontal navigation </h3>
-
       <ul class="flex-container flex-menu background-1">
-        <ul class="background-3 first-item"><a href="#">Home</a></ul>
-        <ul class="background-3 second-item"><a href="#">About Us</a></ul>
-        <ul class="background-3 third-item"><a href="#">Services</a></ul>
-        <ul class="background-3 fourth-item"><a href="#">FAQs</a></ul>
-        <ul class="background-3 fifth-item"><a href="#">Contact Us</a></ul>
+        <li class="background-3 first-item"><a href="#">Home</a></li>
+        <li class="background-3 second-item"><a href="#">About Us</a></li>
+        <li class="background-3 third-item"><a href="#">Services</a></li>
+        <li class="background-3 fourth-item"><a href="#">FAQs</a></li>
+        <li class="background-3 fifth-item"><a href="#">Contact Us</a></li>
       </ul>
     </section>    
   </body>
