ready for marking

--- a/Lab 2.4 BYO webpage.html
+++ b/Lab 2.4 BYO webpage.html
@@ -5,55 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rachael Wilkins</title>
-    <link rel="stylesheet" href="/IOD-Labs/Lab 2.4 BYO webpage.css">
+    <link rel="icon" type="image/x-icon" href="/images/cartoon me v2.png">
+    <link rel="stylesheet" href="/IOD-Labs/Lab 2.4 BYO webpage.css"> 
   </head>
   <body>
     <header>
     <section>
         <img src="/images/cartoon me v2.png" alt="me as a cartoon" style="width:200px;height:200px;">
         <h1>Rachael Elizabeth Wilkins</h1>
-        <h3>Aspiring Techie</h3>
-        <div class="flex-item-1">
-        <h2>About Me</h2>
-        <p>Kia ora, e hoa! Ko Rachael toku ingoa - an aspiring Software Engineer. I have lots of experience in copywriting, storytelling, brand management, and social media management. I am also a Group Fitness Instructor, and food and nap enthusiast. Dogs are great.</p>
-        <h3>Contact Me</h3> 
-        <ul> 
-            <li><a href="mailto:rachaelwilkinscommunications@outlook.com">Email</a></li>
-            <li>+64 21 901 400</li>
-            <li>Tāmaki Makaurau, Aotearoa</li>
-            <li><a href="https://www.linkedin.com/in/rachael-wilkins/">LinkedIn</a></li>
-        </ul> 
-        </div>
-      </section>
-    </header>
+        <h3>Aspiring Techie</h3>      
+    </section>
+    </header> 
     <section>
-        <div class="flex-item-2">
-        <h2>Education</h2>
-        <h3>Institute of Data - Software Engineering Certificate</h3>
-        <p>February 2024 - July 2024</p>
-            <ul> 
-                <li>Web development</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Javascript</li>
-                <li>React</li>
-                <li>Python</li>
-            </ul>  
-        <h3>Auckland University of Technology - Bachelor of Business, Advertising and Marketing</h3>
-        <p>February 2002 - December 2006</p>
-            <ul> 
-                <li>Brand Management</li>
-                <li>Marketing Management</li>
-                <li>Copywriting</li>
-                <li>Storytelling</li>
-                <li>Media Management</li>
-        </ul>
-        </div> 
-    </section> 
+        <div class="flex-item-1">       
+        <h2>About Me</h2>
+        <p>Kia ora, e hoa! Ko Rachael toku ingoa - an aspiring Software Engineer. I am proficient in copywriting, storytelling, brand management, and social media management. I am also a Group Fitness Instructor, and food and nap enthusiast. Dogs are great.</p>  
+    </div>
+      </section>
+        <section>
         <div class="flex-item-3">
         <h2>Work Experience</h2> 
         <h3>National Communications and Engagement Manager - Healthy Families NZ, funded by Te Whatu Ora</h3>
-        <p>January 2023 - present</p>
+        <p>January 2023 - present (contract role)</p>
             <ul> 
                 <li>Brand Management</li>
                 <li>Marketing Management</li>
@@ -92,8 +65,39 @@
         </div>  
     </section>  
     <section>
-        
-    </section>     
+        <div class="flex-item-2">
+        <h2>Education</h2>
+        <h3>Institute of Data - Software Engineering Certificate</h3>
+        <p>February 2024 - July 2024</p>
+            <ul> 
+                <li>Web development</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>React</li>
+                <li>Python</li>
+            </ul>  
+        <h3>Auckland University of Technology - Bachelor of Business, Advertising and Marketing</h3>
+        <p>February 2002 - December 2006</p>
+            <ul> 
+                <li>Brand Management</li>
+                <li>Marketing Management</li>
+                <li>Copywriting</li>
+                <li>Storytelling</li>
+                <li>Media Management</li>
+        </ul>
+        </div> 
+    </section> 
+    <section>
+        <h2>Contact Me</h2>
+        <div class="flex-item-5"></div>
+        <ul>
+            <li><a href="mailto:rachaelwilkinscommunications@outlook.com">Email</a></li>
+            <li>+ 64 21 901 400</li>
+            <li>Tāmaki Makaurau, Aotearoa</li>
+            <li><a href="www.linkedin.com/in/rachael-wilkins">LinkedIn</a></li>
+          </ul>
+        </section>    
     <footer>Lovingly crafted by Rachael Wilkins, 2024</footer>
   </body>
 </html>
