completed but not confident of correctness

--- a/Module4/Exercise 1 Cards.html
+++ b/Module4/Exercise 1 Cards.html
@@ -40,7 +40,7 @@
         // include the populated template into the page
         document.querySelector("#card-list").appendChild(template);
       }
-      addCard('card.title','card.text');
+      addCard("My Card Title", "lorem ipsum ble bla");
     </script>
   </body>
 </html>
