--- a/Module4/cards.html
+++ b/Module4/cards.html
@@ -1,46 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <style>
-      body {
-        font-family: Arial, Helvetica, sans-serif;
-        background-color: #e3f2fd;
-      }
-      .card {
-        padding: 10px;
-      }
-      .card-title {
-        font-weight: 600;
-        font-size: 3em;
-        padding: 0 0 10px 0;
-      }
-      .card-description {
-        font-weight: 400;
-        font-size: 2em;
-      }
-    </style>
-  </head>
-  <body>
-    <template id="card-template">
-      <div class="card">
-        <div class="card-body">
-          <div class="card-title"></div>
-          <div class="card-text"></div>
-        </div>
-      </div>
-    </template>
-    <div id="card-list"></div>
-    <script>
-      function addCard() {
-        // clone the template
-        const template = document.getElementById("card-template").content.cloneNode(true);
-        // populate the template
-        template.querySelector(".card-title").innerText = "My Card Title";
-        template.querySelector(".card-text").innerText = "lorem ipsum ble bla";
-        // include the populated template into the page
-        document.querySelector("#card-list").appendChild(template);
-      }
-      addCard('card.title','card.text');
-    </script>
-  </body>
-</html>
+I dont know why this file is showing up - its not in my VSC and I can't delete it fron here either ahhhhhhhhhh
