--- a/Module4/Exercise 4 Bootstrap Cards.html
+++ b/Module4/Exercise 4 Bootstrap Cards.html
@@ -9,25 +9,25 @@
 </head>
 <body> <!--the cards don't look amazing when you run it, as they are all different lengths but I've spent too long on formatting this code to care about trying to fix that-->
     <div class="row">
-        <div class="col-4 col-lg-4 col-md-2 col-sm-1">
+        <div class="col-lg-3 col-md-2 col-sm-1">
             <div class="card" style="width: 18rem;">
                 <img src="/images/pika 1.jpg" class="card-img-top" alt="Pika Pika">
                 <div class="card-body">
                     <h5 class="card-title">Pikachu</h5>
-                    <p class="card-text">The unofficial mascot of Pokemon, electric rat.</p>
+                    <p class="card-text">The unofficial mascot of Pokemon, electric rat. Hard to dislike.</p>
                 </div>
             </div>
         </div>    
-        <div class="col-4 col-lg-4 col-md-2 col-sm-1">
+        <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="card" style="width: 18rem;">
                 <img src="/images/bulba 2.jpg" class="card-img-top" alt="bulba">
                 <div class="card-body">
                     <h5 class="card-title">Bulbasaur</h5>
-                    <p class="card-text">Was a bit of a jerk initially but got better. Cute boi.</p>
+                    <p class="card-text">Was a bit of a jerk initially but got better. Cute boi, kept some sass.</p>
                 </div>
             </div>
         </div>               
-        <div class="col-4 col-lg-4 col-md-2 col-sm-1">
+        <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="card" style="width: 18rem;">
                 <img src="/images/togepi 3.jpg" class="card-img-top" alt="togepi">
                 <div class="card-body">
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div> 
-        <div class="col-4 col-lg-4 col-md-2 col-sm-1">
+        <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="card" style="width: 18rem;">
                 <img src="/images/eevee 4.jpg" class="card-img-top" alt="eevee">
                 <div class="card-body">
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-4 col-lg-4 col-md-2 col-sm-1">
+        <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="card" style="width: 18rem;">
                 <img src="/images/charizard 5.jpg" class="card-img-top" alt="charizard">
                 <div class="card-body">
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>    
-        <div class="col-4 col-lg-4 col-md-2 col-sm-1">
+        <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="card" style="width: 18rem;">
                 <img src="/images/snorlax 6.jpg" class="card-img-top" alt="snorlax">
                 <div class="card-body">
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>   
-        <div class="col-4 col-lg-4 col-md-2 col-sm-1">
+        <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="card" style="width: 18rem;">
                 <img src="/images/psyduck 7.jpg" class="card-img-top" alt="psyduck">
                 <div class="card-body">
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>    
-        <div class="col-4 col-lg-4 col-md-2 col-sm-1">
+        <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="card" style="width: 18rem;">
                 <img src="/images/squirtle 8.jpg" class="card-img-top" alt="squirtle">
                 <div class="card-body">
