--- a/Module4/Exercise 4 Bootstrap Cards.html
+++ b/Module4/Exercise 4 Bootstrap Cards.html
@@ -8,9 +8,9 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">"
 </head>
 <body> <!--the cards don't look amazing when you run it, as they are all different lengths but I've spent too long on formatting this code to care about trying to fix that-->
-    <div class="row">
-        <div class="col-lg-3 col-md-2 col-sm-1">
-            <div class="card" style="width: 18rem;">
+    <div class="row g-4">
+        <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="card">
                 <img src="/images/pika 1.jpg" class="card-img-top" alt="Pika Pika">
                 <div class="card-body">
                     <h5 class="card-title">Pikachu</h5>
@@ -19,7 +19,7 @@
             </div>
         </div>    
         <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img src="/images/bulba 2.jpg" class="card-img-top" alt="bulba">
                 <div class="card-body">
                     <h5 class="card-title">Bulbasaur</h5>
@@ -28,7 +28,7 @@
             </div>
         </div>               
         <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img src="/images/togepi 3.jpg" class="card-img-top" alt="togepi">
                 <div class="card-body">
                     <h5 class="card-title">Togepi</h5>
@@ -37,7 +37,7 @@
             </div>
         </div> 
         <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img src="/images/eevee 4.jpg" class="card-img-top" alt="eevee">
                 <div class="card-body">
                     <h5 class="card-title">Eevee</h5>
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img src="/images/charizard 5.jpg" class="card-img-top" alt="charizard">
                 <div class="card-body">
                     <h5 class="card-title">Charizard</h5>
@@ -55,7 +55,7 @@
             </div>
         </div>    
         <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img src="/images/snorlax 6.jpg" class="card-img-top" alt="snorlax">
                 <div class="card-body">
                     <h5 class="card-title">Snorlax</h5>
@@ -64,7 +64,7 @@
             </div>
         </div>   
         <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img src="/images/psyduck 7.jpg" class="card-img-top" alt="psyduck">
                 <div class="card-body">
                     <h5 class="card-title">Psyduck</h5>
@@ -73,7 +73,7 @@
             </div>
         </div>    
         <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img src="/images/squirtle 8.jpg" class="card-img-top" alt="squirtle">
                 <div class="card-body">
                     <h5 class="card-title">Squirtle</h5>
