--- a/Module4/Exercise 2.2 Repeat.html
+++ b/Module4/Exercise 2.2 Repeat.html
@@ -31,19 +31,21 @@
     </template>
     <div id="card-list"></div>
     <script>
+     const data = [
+      {name: 'bob', age: 23},
+      {name: 'alice', age: 39}
+    ]; 
     function addCard() {
     // clone the template
      const template = 
             document.getElementById("card-template").content.cloneNode(true);
     // populate the template
-    template.querySelector('.card-title').innerText ='Alice';
-    template.querySelector('.card-text').innerText ='39';
-    template.querySelector('.card-title').innerText ='Bob';
-    template.querySelector('.card-text').innerText ='23';
+    template.querySelector('.card-title').innerText = data.name;
+    template.querySelector('.card-text').innerText = data.age;
     // include the populated template into the page
     document.querySelector('#card-list').appendChild(template);
     }
-    addCard();
+    addCard(data);
    </script>  
   </body>
 </html>
