ready for marking

--- a/Module4/Exercise 7 CSS squares.html
+++ b/Module4/Exercise 7 CSS squares.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sqaure doing a thing</title>
+    <title>Square doing a thing</title>
     <link rel="stylesheet" href="/IOD-Labs/Module4/Exercise 7 CSS Squares.css">
 </head>
 <body>
