--- a/Module4/Exercise 10 FakeShop.html
+++ b/Module4/Exercise 10 FakeShop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Le Store De Fake</title>
+    <title>Le Shoppe De Fake</title>
     <link rel="icon" type="image/x-icon" href="/images/icons8-shop-64.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
