--- a/Mini-Project-1/Mini-Project-1-results.html
+++ b/Mini-Project-1/Mini-Project-1-results.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Charby Results</title>
     <link rel="icon" type="image/x-icon" href="/images/icons8-cat-30.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/IOD-Labs/Mini-Project-1/Mini-Project-1-style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
+    <script src="/IOD-Labs/Mini-Project-1/Mini-Project-1-results.js"></script>
 <style>
     body {
         background-image: url('/images/Cat\ Tail.png');
@@ -33,5 +37,14 @@
 <body>
 <h1>Your Results</h1>   
 <p>Based on your answers, we think the below breeds will be the purr-fect fit for your lifestyle and household!</p> 
+
+<section class="container">
+    <div id="cards" class="row row-cols-3 row-cols-md-3 g-3">
+    </div>
+</section>
+
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous">
 </html>
