--- a/Mini-Project-1/Mini-Project-1-quiz.html
+++ b/Mini-Project-1/Mini-Project-1-quiz.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/images/icons8-cat-30.png">
     <link rel="stylesheet" href="/IOD-Labs/Mini-Project-1/Mini-Project-1-style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
+    <script src="/IOD-Labs/Mini-Project-1/Mini-Project-1-quiz.js"></script>
     <style>
         body {
             background-image: url('/images/Cat\ Peek.png');
