--- a/Mini-Project-1/Mini-Project-1-contact.html
+++ b/Mini-Project-1/Mini-Project-1-contact.html
@@ -26,12 +26,9 @@
         font-size: 20px;
         padding: 15px;
         border: thin; 
+        margin-left: 25%;
     }
-
-    .topnav {
-        color: white;
-    }
-
+    
 </style>
 </head>
 <div class="topnav">
@@ -47,17 +44,16 @@
 <body>
     <h1>Contact Us</h1>
     <p>We would love to hear from you - fill out the form, and we will get back to you as soon as we can!</p>   
-    <div class="container">
-        <form action="/action_page.php">
-          <label for="fname"><b>First Name</b></label>
-          <input type="text" id="fname" name="firstname"> 
-          <label for="lname"><b>Last Name</b></label>
-          <input type="text" id="lname" name="lastname"> 
-          <label for="email"><b>Email</b></label>
-          <input type="text" id="email" name="email">
-          <label for="subject"><b>Subject</b></label>
-          <textarea id="subject" name="subject" style="height:200px"></textarea>
-        </form>
+    <form action="/action_page.php">
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="firstname">  
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lastname">    
+        <label for="lname">Email</label>
+        <input type="text" id="email" name="lastname">
+        <label for="subject">Subject</label>
+        <textarea id="subject" name="subject" style="height:200px"></textarea>   
+      </form>
     <button onclick="myFunction()">Submit</button>
     </div>
     <script>
