--- a/Mini-Project-1/Mini-Project-1-results.html
+++ b/Mini-Project-1/Mini-Project-1-results.html
@@ -23,6 +23,14 @@
         font-size: 20px;
     }
 
+    .topnav {
+            text-align: end;
+            margin-right: 2%;
+            text-decoration: none;
+            color: white;
+            font-family: "Quicksand", sans-serif;
+        }
+
 </style>
 <div class="topnav">
     <ul>
@@ -36,13 +44,13 @@
 </div>    
 <body>
 <h1>Your Results</h1>   
-<p>Based on your answers, we think the below breeds will be the purr-fect fit for your lifestyle and household!</p> 
+<p>Based on your answers, we think this breed will be the purr-fect fit for your lifestyle and household!</p><br>
 
 <section class="container">
-    <div id="cards" class="row row-cols-3 row-cols-md-3 g-3">
+    <div id="cards" class="row row-cols-1 row-cols-md-1 g-1">
     </div>
-</section>
-
+</section><br>
+<p>Want to look around? Browse our <a href="/IOD-Labs/Mini-Project-1/Mini-Project-1-library.html">Breed Library</a>, which has information over 60 breeds of cats!</p> 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
