--- a/Mini-Project-1/Mini-Project-1-home.html
+++ b/Mini-Project-1/Mini-Project-1-home.html
@@ -15,12 +15,13 @@
     }
 
     h1 {
-        margin-top: 450px;
+        margin-top: 400px;
     }
 
     p {
         text-align: center;
         color: black;
+        font-size: 20px;
     }
 
     button {
