--- a/Mini-Project-1/Mini-Project-1-results.html
+++ b/Mini-Project-1/Mini-Project-1-results.html
@@ -46,11 +46,9 @@
 <h1>Your Results</h1>   
 <p>Based on your answers, we think this breed will be the purr-fect fit for your lifestyle and household!</p><br>
 
-<section class="container">
-    <div id="cards" class="row row-cols-1 row-cols-md-1 g-1">
-    </div>
-</section><br>
+
 <p>Want to look around? Browse our <a href="/IOD-Labs/Mini-Project-1/Mini-Project-1-library.html">Breed Library</a>, which has information over 60 breeds of cats!</p> 
+<footer>© 2024, Rachael Wilkins.</footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
