WIP minor formatting

--- a/Mini-Project-1/Mini-Project-1-shop.html
+++ b/Mini-Project-1/Mini-Project-1-shop.html
@@ -27,4 +27,5 @@
 <body>
     <h1>Shop</h1>
     <h2>Coming soon! Your one-stop shop to buy everything for your new feline friend.</h2>
+<footer>© 2024, Rachael Wilkins.</footer>    
 </body> 
