--- a/Mini-Project-1/Mini-Project-1-contact.html
+++ b/Mini-Project-1/Mini-Project-1-contact.html
@@ -16,17 +16,19 @@
 
     p {
         text-align: center;
+        font-size: 20px;
     }
 
     button {
         background-color: grey;
-        color: white;
+        color: black;
         border-radius: 30px;
         cursor: pointer;
         font-size: 20px;
         padding: 15px;
         border: thin; 
         margin-left: 25%;
+        font-weight: bold;
     }
     
 </style>
