--- a/Mini-Project-1/Mini-Project-1-contact.html
+++ b/Mini-Project-1/Mini-Project-1-contact.html
@@ -46,7 +46,7 @@
 <body>
     <h1>Contact Us</h1>
     <p>We would love to hear from you - fill out the form, and we will get back to you as soon as we can!</p>   
-    <form action="/action_page.php">
+    <div class="form">
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname">  
         <label for="lname">Last Name</label>
@@ -56,6 +56,7 @@
         <label for="subject">Subject</label>
         <textarea id="subject" name="subject" style="height:200px"></textarea>   
       </form>
+    </div>  
     <button onclick="myFunction()">Submit</button>
     </div>
     <script>
