need to format properly

--- a/Mini-Project-1/Mini-Project-1-quiz.html
+++ b/Mini-Project-1/Mini-Project-1-quiz.html
@@ -26,9 +26,10 @@
         }
 
         p {
-            font-size: 22px;
+            font-size: 20px;
             color: black;
             text-align: left;
+            margin-left: 40%;
         }
 
         button {
