--- a/Mini-Project-1/Mini-Project-1-home.html
+++ b/Mini-Project-1/Mini-Project-1-home.html
@@ -15,7 +15,7 @@
     }
 
     h1 {
-        margin-top: 400px;
+        margin-top: 425px;
     }
 
     p {
@@ -39,7 +39,6 @@
 <div class="topnav">
     <ul>
     <ul><a class="active" href="/IOD-Labs/Mini-Project-1/Mini-Project-1-home.html">Home</a></ul>
-    <ul><a href="/IOD-Labs/Mini-Project-1/Mini-Project-1-quiz.html">Quiz</a></ul>
     <ul><a href="/IOD-Labs/Mini-Project-1/Mini-Project-1-about.html">About</a></ul>
     <ul><a href="/IOD-Labs/Mini-Project-1/Mini-Project-1-library.html">Breed Library</a></ul>
     <ul><a href="/IOD-Labs/Mini-Project-1/Mini-Project-1-shop.html">Shop</a></ul>
@@ -48,9 +47,9 @@
 </div>
 <body> 
 <h1>Find Your Purr-fect Cat Breed</h1>
-<p>Looking for a cat companion to add to your household? Use our short and simple quiz to help pair you with your ideal four-legged feline friend.</p>
-<button class="button"><a href="/IOD-Labs/Mini-Project-1/Mini-Project-1-quiz.html">Get Started</a></button><br>
-<p>Or, you can browse our <a href="/IOD-Labs/Mini-Project-1/Mini-Project-1-library.html">Breed Library</a>, housing over 60 breeds and paws-ible matches.</p>
+<p>Looking for a cat companion to add to your household? <br>
+    Our Cat Breed Library has facts and information on over 60 breeds to help find your next paws-ible pet.</p>
+<button class="button"><a href="/IOD-Labs/Mini-Project-1/Mini-Project-1-library.html">Get Started</a></button><br>
 <footer>© 2024, Rachael Wilkins.</footer>
 </body>
 </html>
