--- a/Mini-Project-1/Mini-Project-1-library.html
+++ b/Mini-Project-1/Mini-Project-1-library.html
@@ -15,10 +15,9 @@
 <div class="topnav">
     <ul>
     <ul><a class="active" href="/IOD-Labs/Mini-Project-1/Mini-Project-1-home.html">Home</a></ul>
-    <ul><a href="/IOD-Labs/Mini-Project-1/Mini-Project-1-quiz.html">Quiz</a></ul>
-    <ul><a href="/IOD-Labs/Mini-Project-1/Mini-Project-1-about.html">About</a></ul>
     <ul><a href="/IOD-Labs/Mini-Project-1/Mini-Project-1-library.html">Breed Library</a></ul>
     <ul><a href="/IOD-Labs/Mini-Project-1/Mini-Project-1-shop.html">Shop</a></ul>
+    <ul><a href="/IOD-Labs/Mini-Project-1/Mini-Project-1-about.html">About</a></ul>
     <ul><a href="/IOD-Labs/Mini-Project-1/Mini-Project-1-contact.html">Contact</a></ul>   
     </ul>
 </div>
@@ -42,17 +41,24 @@
 </style> 
 <body>
     <h1>Cat Breed Library</h1>
-    <h4>Read up on over 60 different breeds, and decide which type of cat could be your purr-fect pal.</h4>
+    <h4>Read up on over 60 different breeds, and discover which could be purr-fect for you and your household.</h4>
+    <form class="search-form">
+        <input type="text" placeholder="Type a breed here.." class="search-input">
+        <button type="submit" class="search-button">Search</button><br>
+      </form>
 
     <section class="container">
         <div id="cards" class="row row-cols-3 row-cols-md-3 g-3">
         </div>
     </section>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    <a href="#" class="load-more">Load More<span class="loading"><span></span></span>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous">
-  
-<footer>© 2024, Rachael Wilkins.</footer>
+
+    <footer>© 2024, Rachael Wilkins.</footer>
+
 </body>
 </html>
