--- a/Mini-Project-1/Mini-Project-1-contact.html
+++ b/Mini-Project-1/Mini-Project-1-contact.html
@@ -45,7 +45,8 @@
 <body>
     <h1>Contact Us</h1>
     <p>We would love to hear from you - fill out the form, and we will get back to you as soon as we can!</p>   
-    <div class="form">
+    <form>        
+    </form><div class="form">
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname">  
         <label for="lname">Last Name</label>
