--- a/Module5/myapp/Lab Exercises/Exercise 5.3.html
+++ b/Module5/myapp/Lab Exercises/Exercise 5.3.html
@@ -7,26 +7,34 @@
     <label>Num1 :</label><input type="text" id="txtNum1">
     </div>
         <div id="method">  
-            <button type="button" onclick="Add()">+</button>
-            <button type="button" onclick="Subtract()">-</button>
-            <button type="button" onclick="Multiply()">*</button>
-            <button type="button" onclick="Divide()">/</button>
+            <button type="button" onclick="setMethod(`Add`)">+</button>
+            <button type="button" onclick="setMethod(`Subtract`)">-</button>
+            <button type="button" onclick="setMethod(`Multiply`)">*</button>
+            <button type="button" onclick="setMethod(`Divide`)">/</button>
     </div> 
     <label>Num2 :</label><input type="text" id="txtNum2">
     <div>
         <button onclick="Calculate()">Calculate</button>
-        <input id="result">
+        <p id="result"></p>
     </div>   
   </body>
   <script>
+    let method; 
+    function setMethod(meth) {
+        method=meth
+    }
     function Calculate()
     {
-       let method = document.getElementById("method").value;
+      //  let method = document.getElementById("method").value;
+       console.log(method);
        let NUM1 = document.getElementById("txtNum1").value;
        let NUM2 = document.getElementById("txtNum2").value;
-       fetch(`http://127.0.0.1:3004/Calculator/${method}?num1=${NUM1}&num2=${NUM2}`)
+       fetch(`http://localhost:3000/api/ex2/${method}?num1=${NUM1}&num2=${NUM2}`)
       .then((response) => response.json())
-      .then((data) => document.getElementById("result").innerText = data.result)
+      .then((data) => 
+      document.getElementById("result").innerText = data.result,
+      )
+      
     }
    
   </script>
